# DrillDev

./: .editorconfig  .eslintcache  .eslintrc.js  .gitalias  .gitignore  .gitmodules  .prettierrc  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  file.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  readme.md  renovate.json  vetur.config.js
.husky/: commit-msg  (+1 more)
backend/: .dockerignore  .env.example  .eslintrc.js  .gitrepo  Dockerfile  README.md  commitlint.config.js  package.json  pyproject.toml  readme.md  requirements.txt  tsconfig.json
backend/.github/workflows/: notify-submodule-update.yaml
backend/.husky/: commit-msg  pre-commit
backend/dockerfiles/: js-playwright.Dockerfile  js-playwright.dockerfile  port-check.Dockerfile  port-check.dockerfile  py-playwright.Dockerfile  py-playwright.dockerfile
backend/drilldev/: app.py
backend/drilldev/scripts/: server.py
backend/prisma/: .env  schema.prisma
backend/prisma/migrations/20210823043205_init/: migration.sql
backend/prisma/migrations/20210824035129_relationships/: migration.sql
backend/prisma/migrations/20210826003630_build_and_start_commands/: migration.sql
backend/prisma/migrations/20210827034325_sync/: migration.sql
backend/prisma/migrations/20210827035133_auth/: migration.sql
backend/scripts/: build-docker-images.sh  build-docker-images.ts  server.py  start-server.sh
backend/src/: app.py  app.ts
backend/src/plugins/: auth.ts
backend/src/utils/: extract-data.ts  generate-session-token.ts  send-email.ts
backend/test/: test.js  test.py
(+126 files in other folders)
