[tool.poetry]
name = "drilldev"
version = "0.1.0"
description = ""
authors = ["George Zhang <geetransit@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.14.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[tool.poetry.scripts]
server = "scripts.server:main"

[build-system]
requires = ["poetry-core>=1.1.7"]
build-backend = "poetry.core.masonry.api"
